--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
         <div id="form" style="display: none">
           <section>
             <h2>Your Initials</h2>
-            <input id="initial" type="text" />
+            <input id="initialInput" type="text" />
             <button type="button" id="initialBtn">Submit</button>
           </section>
         </div>
         <ul id="list">
           <b>Score</b>
-          <li>u</li>
-          <li>uh</li>
+          <p id="name"></p>
         </ul>
       </div>
     </div>
