minor changes to content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
           <h2 id="question">Rules of The Quiz</h2>
         </div>
         <main>
-          <p id="rules">Rules</p>
+          <p id="rules">
+            Welcome! You must answer these four questions within 30 seconds. If
+            you answer a question incorrectly, 10 seconds will be deducted from
+            timer.
+          </p>
           <div id="answer-btn" class="btn-grid">
             <button id="ans1" class="btn" style="display: none">Answer</button>
             <button id="ans2" class="btn" style="display: none">Answer</button>
